# firmware-rs

./: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
drivers/max31855/: Cargo.toml
drivers/max31855/src/: lib.rs
ecu/: Cargo.toml
ecu/src/: main.rs
fcu/: Cargo.toml
src/: main.rs
