[workspace]
members = [
  "fcu",
  "ecu",
  "drivers/max31855",
]

[profile.release]
codegen-units = 1 # improve optimizations. controls how many threads are used
                  # during code generation; typically defaults to #cores, but
                  # >1 thread improves compilation speed at the expense
                  # of optimization quality.
debug = true      # debug symbols! this doesn't actually increase FLASH
                  # utilization since symbols are stripped from the uploaded
                  # .bin; your debugger looks at the _local copy of the ELF file_
                  # to figure out what addresses map to what symbols.
lto = true        # better optimizations (reoptimize at link-time)
